# BirdSet

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  XAI-2.ipynb  XAI-3-TLDR-Tutorial.ipynb  XAI-data.ipynb  croissant.json  pylintrc  pyproject.poetry  pyproject.raphael  pyproject.toml  pytest.ini  report.xml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: black-check.yml  black_linting.yml
Quantus/: Quantus.ipynb  requirements_quantus.txt  results_10.pkl
beats/: BEATs.py
birdset/: __init__.py  eval.py  evaluate_pretrained_model.sh  main.py  train.py  validate.sh
birdset/callbacks/: __init__.py  metric_collector.py  timetracker.py
birdset/configs/: __init__.py  datamodule_configs.py  model_configs.py  module_configs.py
birdset/datamodule/: __init__.py  base_datamodule.py  beans_datamodule.py  beans_embedding_datamodule.py  beans_finetune.py  birdset_datamodule.py  birdset_embedding_datamodule.py  embedding_datamodule.py  embeddings_datamodule.py  esc50_datamodule.py  esc50_embedding_datamodule.py  gadme_datamodule.py  inference_datamodule.py  pretrain_datamodule.py  subset_datamodules.py
birdset/models/: AudioMAE.py
birdset/modules/: __init__.py  base_module.py  embedding_module.py  finetune_module.py  hybrid_module.py  multiclass_module.py  multilabel_module.py
birdset/utils/: __init__.py  extras.py  instantiate.py  label_utils.py  pylogger.py  rich_utils.py  saving_utils.py  utils.py
configs/: background_data_download.yaml  default.yaml  embeddings.yaml  main.yaml  test_vit_train.yaml  train.yaml
configs/callbacks/: cluster.yaml  default.yaml  early_stopping.yaml  embed_default.yaml  embed_early_stopping.yaml  model_checkpoint.yaml  model_checkpoint_multiclass.yaml  model_summary.yaml  multiclass.yaml  rich_progress_bar.yaml  time_tracking.yaml
configs/data/: esc50.yaml  high_sierra.yaml  mnist.yaml  sapsucker.yaml
configs/datamodule/: BirdSet.yaml  HSN.yaml  NBP.yaml  NES.yaml  PER.yaml  POW.yaml  SNE.yaml  SSW.yaml  UHH.yaml  XCL.yaml  XCM.yaml  amazon_basin.yaml  beans.yaml  beans_embedding.yaml  beans_finetune.yaml  bird_db.yaml  birdset_embedding.yaml  columbia_costa_rica.yaml  esc50.yaml  hawaiian_islands.yaml  high_sierra.yaml  high_sierras.yaml  nips.yaml  powdermill_nature.yaml  sapsucker.yaml  sapsucker_woods.yaml  sierra_nevada.yaml  xenocanto_m.yaml
configs/dataset/: esc50.yaml  high_sierra.yaml  hsn.yaml  sapsucker.yaml
configs/debug/: debug_multiclass.yaml  debug_multiclass_pretrain.yaml  debug_multilabel.yaml  debug_perch.yaml  default.yaml
configs/embedding_module/: embedding.yaml
configs/experiment/: ast_esc50.yaml  efficientnet_HSN.yaml  esc50_ast.yaml  esc50_ast_wandb.yaml  esc50_eat_wandb.yaml  esc50_resnet_wandb.yaml  esc50_w2v2_wandb.yaml  high_sierras_1k_ast_wandb.yaml  high_sierras_ast_multiclass_5event_noweights_aug.yaml  high_sierras_ast_wandb_multiclass.yaml  high_sierras_ast_wandb_multiclass_5events.yaml  high_sierras_ast_wandb_multiclass_5events_alltrain.yaml  high_sierras_ast_wandb_multiclass_5events_weights.yaml  high_sierras_ast_wandb_multiclass_alltrain.yaml  high_sierras_ast_wandb_multilabel.yaml  high_sierras_ast_wandb_multilabel_5events.yaml  high_sierras_ast_wandb_multilabel_5events_focalweight.yaml  high_sierras_ast_wandb_multilabel_alltrain.yaml  high_sierras_eat_multilabel_noaugs.yaml  high_sierras_eat_wandb.yaml  high_sierras_eat_wandb_multilabel_5events.yaml  high_sierras_multiclass_5event_noweights_noaug.yaml  high_sierras_nocheckpoint_multiclass_5event_noweights_noaug.yaml  high_sierras_pretrainedast_multiclass_5event_noweights_noaug.yaml  high_sierras_w2v2_wandb_multiclass.yaml  high_sierras_w2v2_wandb_multiclass_5events.yaml  high_sierras_w2v2_wandb_multiclass_alltrain.yaml  resnet_esc50.yaml  test_mnist.yaml  xenocanto_m_eat_multilabel.yaml  xenocanto_m_without_ast_multiclass_1event_noweights_noaug.yaml  xenocanto_m_without_ast_multiclass_5events_noweights.yaml  xenocanto_m_without_ast_multilabel_5event_600limit.yaml  xenocanto_m_without_w2v2_multiclass_5events_weights.yaml
configs/extras/: default.yaml
configs/hydra/: cluster.yaml  default.yaml  fricco_cluster.yaml
configs/logger/: mlflow.yaml  wandb.yaml  wandb_default.yaml  wandb_flow.yaml
configs/loggers/: wandb.yaml
configs/model/: ast.yaml  ast_copy.yaml  default.yaml  hubert.yaml  resnet.yaml  wav2vec2.yaml
configs/module/: ast.yaml  embedding.yaml  finetune.yaml  hf_ast.yaml  hubert.yaml  multiclass.yaml  multilabel.yaml  multilabel_embedding.yaml  multilabel_finetune.yaml  mutlilabel.yaml  test_vit_multilabel.yaml  wav2vec2.yaml
dataset/: AlphaCodes.csv  Bird-DB.pkl  bird_db.html  build_dataset.ipynb  build_metadata.ipynb  heatmap.html  nips4b_birdchallenge_espece_list.csv
experiment_example_scripts/: DT_example.py  MT_example.py
experiments/: README.md  main.py
gadme/: README.md  feature_extraction.py  main.py
notebooks/: 0-lr-test.ipynb  07-lr-complete_metadata.ipynb  1-lr-preprocessing_audio_data.ipynb  3-lr-streaming_hf.ipynb  5-lr-work-with-hf.ipynb  6-lr-augmentations_hf.ipynb  7-lr-complete_metadata.ipynb  8-lr-explore_zenodo.ipynb  9-rs-train-resnet.ipynb  ResNetonESC50.ipynb  ResnetonHSN.ipynb  benchmark_efficientnet_esc50.ipynb  benchmark_resnet_esc50.ipynb  create_multilabel.py  download_background_noise.ipynb  download_background_noise.py  load_eat.ipynb  load_hf_datasets.py  pretraining.ipynb  test_collate.py  test_loading.py  tutorial_augmentations.ipynb
resources/: evaluate_pretrained_model.sh  validate.sh
results/: plots.ipynb
scripts/: beans.sh
slurm/: push_to_hf.sh
src/: main.py  train.py
sweeps/: base.yaml  base_grid.yaml  classifier.yaml
tests/: Dockerfile  conftest.py  test_augmentations.py  test_datasets.py  test_fast_dev_runs.py  test_models.py  utils.py
(+2751 files in other folders)
