[tool.poetry]
name = "birdset"
version = "0.2.0"
description = "BirdSet: A Large-Scale Dataset for Audio Classification in Avian Bioacoustics"
authors = ["Lukas Rauch <lukas.rauch@uni-kassel.de>", "Raphael Schwinger <rsc@informatik.uni-kiel.de>", "Moritz Wirth <moritz.wirt@uni-kassel.de>", "Rene  Heinrich <rene.heinrich@iee.fraunhofer.de>", "Jonas Lange <jla@informatik.uni-kiel.de>"]
readme = "README.md"
packages = [
    { include = "biofoundation", from = "projects/" },
    { include = "birdset", from = "./" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = "^1.11.3"
ffprobe = "^0.5"
# --------- pytorch --------- #
torch = {version = "=2.0.1+cu118", source = "pytorch_gpu"}
torchvision = {version = "=0.15.2+cu118", source = "pytorch_gpu"}
torchaudio = {version = "=2.0.2+cu118", source = "pytorch_gpu"}
lightning = "^2.2.2"
torchmetrics= "^0.11"

# --------- tensorflow --------- #
tensorflow = {version = "2.14", extras = ["and-cuda"]}
tensorflow-hub = "^0.16.1"
tensorboard = "^2.14.1"

# --------- hydra --------- #
hydra-core = "1.3.2"
hydra-colorlog = "1.2"

# --------- loggers --------- #
# wandb
# neptune-client
# mlflow
# comet-ml
# aim>=3.16.2  # no lower than 3.16.2, see https://github.com/aimhubio/aim/issues/2550

# --------- others --------- #
# rootutils       # standardizing the project root setup
# pre-commit      # hooks for applying linters on commit
# rich            # beautiful text formatting in terminal
# pytest          # tests
# sh            # for running bash commands in some tests (linux/macos only)
rootutils = "^1.0.7"
pre-commit = "^3.5.0"
rich = "13.7.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
ipywidgets = "^8.1.1"
jupyter = "^1.0.0"
datasets = "2.18.0"
audiomentations = "0.34.1"
torch-audiomentations = "0.11.0"
wandb = "^0.16.0"
transformers = "4.38.0"
pyrootutils = "^1.0.4"
mlflow = "^2.11.0"
pydub = "^0.25.1"
tabulate = "^0.9.0"
timm = "1.0.12"
einops = "^0.8.0"
tensorrt = "8.5.3.1"
numba = "0.60.0"
numpy = "^1.26.4"
black = "^24.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
plumbum = "^1.8.2"
jsonlines = "^4.0.0"
kaggle = "^1.6.11"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "pytorch_gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
