[project]
name = "birdset"
version = "0.3.0"
description = "BirdSet: A Large-Scale Dataset for Audio Classification in Avian Bioacoustics"
authors = [
    { name = "Lukas Rauch", email = "lukas.rauch@uni-kassel.de" },
    { name = "Raphael Schwinger", email = "rsc@informatik.uni-kiel.de" },
    { name = "Moritz Wirth", email = "moritz.wirt@uni-kassel.de" },
    { name = "Rene  Heinrich", email = "rene.heinrich@iee.fraunhofer.de" },
    { name = "Jonas Lange", email = "jla@informatik.uni-kiel.de" },
]
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "audiomentations>=0.41.0",
    "datasets>=3.6.0",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "ipython>=8.36.0",
    "librosa>=0.10.2.post1",
    "lightning>=2.5.1.post0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pyrootutils>=1.0.4",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "torch>=2.7.0",
    "torch-audiomentations>=0.12.0",
    "torchaudio>=2.7.0",
    "torchmetrics>=1.7.1",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.3",
    "wandb>=0.19.11",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

